📚 Issue #3 - Etape 5 : Développement fonctionnel initial
feat(bibliothecaire) (issue #3 - Etape 5e) : correction du modèle et rejeu des tests unitaires

- 🛠️ Corrections : C-MOD-04
- 📘 Modélisation_correction : mise à jour avec une analyse technique avant codage
- 📘 tests-plan : adaptation de T-ENT-01 pour correspondre à un média non typé.
- 🧪 Tests unitaires : test_report_indexE-6

- Index de révision : E-6 (bloc 1 des corrections)

--- a/works/mediatheque/bibliothecaire/templates/bibliothecaire/medias/media_detail.html
+++ b/works/mediatheque/bibliothecaire/templates/bibliothecaire/medias/media_detail.html
@@ -12,7 +12,11 @@
     </tr>
     <tr>
         <th>Type</th>
-        <td>{{ media.media_type }}</td>
+        {% if media.media_type != 'NON_DEFINI' %}
+            <td>{{ media.media_type }}</td>
+        {% else %}
+            <td>Non défini</td>
+        {% endif %}
     </tr>
     {% if media.annee_edition %}
         <tr>
