📚 Issue #3 - Etape 5 : Développement fonctionnel initial
feat(bibliothecaire) (issue #3 - Etape 5f) : fonctionnalités liste des médias

- 📁 /bibliothecaire/views.py
  - Ajout de `MediaTypeListView` avec filtrage dynamique par `media_type`

- 📁 /bibliothecaire/urls.py
  - Route dédiée : `/medias/type/?type=...`

- 📁 /bibliothecaire/templates/bibliothecaire/_base.html
  - Ajout du menu “Médias par type” avec liens vers `LIVRE`, `DVD`, `CD`

- 📁 /bibliothecaire/templates/bibliothecaire/media_list.html
  - Bloc `<h2>` conditionnel selon `media_type`

- 📁 /bibliothecaire/tests_blocs/test_uc_list_media.py
  - Classe `MediaTypeViewTests` avec boucle `subTest()` sur les trois types
  - Tests T-NAV-07, T-ENT-07, T-VUE-08, T-FUN-03 validés

- 📁 /docs/developpement/issue3/task5/Analyse_Fonctionnalites_Bibliothecaire.md
  - Mise à jour de la section 3.1 : `UC-LIST-03` marqué comme _implémenté_
  - Ajout d’un lien vers la Difficulté 10 pour justifier la scission des routes

- 📁 /docs/tests/tests-plan.md
  - Validation des tests `UC-LIST-03` en index F-2

- 📁 /docs/developpement/issue3/_Frontend-main-courante.md
  - Difficulté 10 finalisée avec mention de la route `/medias/type/`

- Index de révision : F-2 (Bibliothecaire : Fonctionnalités Bloc 2 : UC-LIST-01, UC-LIST-02 et UC-LIST-03)

--- a/works/mediatheque/bibliothecaire/templates/bibliothecaire/_base.html
+++ b/works/mediatheque/bibliothecaire/templates/bibliothecaire/_base.html
@@ -13,6 +13,15 @@
                 <li><a href="{% url 'bibliothecaire:media_list' %}">Médias</a></li>
                 <li><a href="{% url 'bibliothecaire:media_list_consultables' %}">Consultables</a></li>
                 <li><a href="{% url 'bibliothecaire:media_list_disponibles' %}">Disponibles</a></li>
+                <li>
+                  Médias par type :
+                  <ul>
+                    <li><a href="{% url 'bibliothecaire:media_list_by_type' %}?type=LIVRE">Livres</a></li>
+                    <li><a href="{% url 'bibliothecaire:media_list_by_type' %}?type=DVD">DVD</a></li>
+                    <li><a href="{% url 'bibliothecaire:media_list_by_type' %}?type=CD">CD</a></li>
+                  </ul>
+                </li>
+
                 {% comment %}
 
                 <li><a href="{% url 'bibliothecaire:emprunt_list' %}">Emprunts</a></li>
