📚 Issue #3 - Etape 5 : Développement fonctionnel initial
feat(bibliothecaire) (issue #3 - Etape 5f) : fonctionnalités Création des médias

- Ajout de la route `bibliothecaire/medias/ajouter/` et du formulaire de création d'un `Media` non typé.
- Ajout de MediaNonTypeListView avec filtrage NON_DEFINI
- Tests fonctionnels : T-FUN-04 à T-FUN-06, T-NAV-09, T-VUE-10, T-ENT-09
- Mise à jour des templates, plan de test (index F-3), analyse fonctionnelle
- Rapport de test indexF-3 validé, site fonctionnel"

- Index de révision : F-3 (Bibliothecaire : Fonctionnalités Bloc 2 : UC-LIST-04 et UC-CREATE-01)

--- a/works/mediatheque/bibliothecaire/templates/bibliothecaire/_base.html
+++ b/works/mediatheque/bibliothecaire/templates/bibliothecaire/_base.html
@@ -9,17 +9,28 @@
         <h1>Médiathèque – Bibliothécaire</h1>
         <nav>
             <ul>
-
-                <li><a href="{% url 'bibliothecaire:media_list' %}">Médias</a></li>
-                <li><a href="{% url 'bibliothecaire:media_list_consultables' %}">Consultables</a></li>
-                <li><a href="{% url 'bibliothecaire:media_list_disponibles' %}">Disponibles</a></li>
                 <li>
-                  Médias par type :
-                  <ul>
-                    <li><a href="{% url 'bibliothecaire:media_list_by_type' %}?type=LIVRE">Livres</a></li>
-                    <li><a href="{% url 'bibliothecaire:media_list_by_type' %}?type=DVD">DVD</a></li>
-                    <li><a href="{% url 'bibliothecaire:media_list_by_type' %}?type=CD">CD</a></li>
-                  </ul>
+                    Lister les médias :
+                    <ul>
+                        <li><a href="{% url 'bibliothecaire:media_list' %}">Tous </a></li>
+                        <li><a href="{% url 'bibliothecaire:media_list_consultables' %}">Consultables</a></li>
+                        <li><a href="{% url 'bibliothecaire:media_list_disponibles' %}">Disponibles</a></li>
+                        <li>
+                          Par type :
+                          <ul>
+                            <li><a href="{% url 'bibliothecaire:media_list_by_type' %}?type=LIVRE">Livres</a></li>
+                            <li><a href="{% url 'bibliothecaire:media_list_by_type' %}?type=DVD">DVD</a></li>
+                            <li><a href="{% url 'bibliothecaire:media_list_by_type' %}?type=CD">CD</a></li>
+                            <li><a href="{% url 'bibliothecaire:media_list_non_types' %}?type=NON_DEFINI">Non défini</a></li>
+                          </ul>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    Créer un média :
+                    <ul>
+                        <li><a href="{% url 'bibliothecaire:media_create' %}">Type "non défini"</a></li>
+                    </ul>
                 </li>
 
                 {% comment %}
