--- a/works/mediatheque/bibliothecaire/templates/bibliothecaire/medias/media_list.html
+++ b/works/mediatheque/bibliothecaire/templates/bibliothecaire/medias/media_list.html
@@ -27,4 +27,9 @@
     <li>Aucun média disponible.</li>
   {% endfor %}
 </ul>
+
+<div style="margin-top: 20px;">
+    <a href="{% url 'bibliothecaire:accueil' %}">Retour à l'accueil</a>
+</div>
+
 {% endblock %}
